// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with custom number width 1`] = `
.emotion-0 {
  width: 360px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 24px;
  padding-bottom: 24px;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: rgba(0,17,34,0.47);
  background-color: transparent;
  border-radius: 4px;
  border: 2px dashed;
  border-color: rgba(0,31,62,0.19);
  font-family: inherit;
  cursor: pointer;
  outline: 0;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    padding-top: 64px;
    padding-bottom: 64px;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: rgba(0,36,73,0.05);
}

<button
  class="emotion-0"
>
  Custom Width SkeletonButton
</button>
`;

exports[`renders with custom percentage width 1`] = `
.emotion-0 {
  width: 50%;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 24px;
  padding-bottom: 24px;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: rgba(0,17,34,0.47);
  background-color: transparent;
  border-radius: 4px;
  border: 2px dashed;
  border-color: rgba(0,31,62,0.19);
  font-family: inherit;
  cursor: pointer;
  outline: 0;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    padding-top: 64px;
    padding-bottom: 64px;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: rgba(0,36,73,0.05);
}

<button
  class="emotion-0"
>
  Custom Width SkeletonButton
</button>
`;

exports[`renders without crashing 1`] = `
.emotion-0 {
  width: 100%;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 24px;
  padding-bottom: 24px;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.5;
  color: rgba(0,17,34,0.47);
  background-color: transparent;
  border-radius: 4px;
  border: 2px dashed;
  border-color: rgba(0,31,62,0.19);
  font-family: inherit;
  cursor: pointer;
  outline: 0;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    padding-top: 64px;
    padding-bottom: 64px;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: rgba(0,36,73,0.05);
}

<button
  class="emotion-0"
>
  Test SkeletonButton
</button>
`;
